# SpectralRift.EngineCore

./: CMakeLists.txt  README.md
private/engine/core/: application.cpp
public/engine/core/: application.hpp
public/engine/core/graphics/: bitmap.hpp  display_info.hpp  graphics_backend.hpp  i_graphics_backend.hpp  i_graphics_context.hpp  texture.hpp
public/engine/core/io/: i_stream.hpp
public/engine/core/platform/: i_platform.hpp  platform.hpp
public/engine/core/utils/: color.hpp  factory.hpp  singleton_factory.hpp  static_factory_registrar.hpp  vector2.hpp
public/engine/core/window/: i_window.hpp  window.hpp
